[CONFIG] redis 랭킹 키 값 userId